Improved store system and parameter-less functions