@@ -6,7 +6,7 @@
 
   <groupId>com.github.rccookie</groupId>
   <artifactId>math</artifactId>
-  <version>2.4.0</version>
+  <version>2.7.0</version>
 
   <properties>
     <maven.compiler.source>18</maven.compiler.source>
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>com.github.rccookie</groupId>
       <artifactId>util</artifactId>
-      <version>1.13.0.0</version>
+      <version>1.13.1.0</version>
     </dependency>
   </dependencies>
 
@@ -42,66 +42,66 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <!--suppress MavenModelInspection -->
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals><goal>single</goal></goals>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        &lt;!&ndash;suppress MavenModelInspection &ndash;&gt;-->
+<!--        <artifactId>maven-assembly-plugin</artifactId>-->
+<!--        <configuration>-->
+<!--          <archive>-->
+<!--            <manifest>-->
+<!--              <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>-->
+<!--            </manifest>-->
+<!--          </archive>-->
+<!--          <descriptorRefs>-->
+<!--            <descriptorRef>jar-with-dependencies</descriptorRef>-->
+<!--          </descriptorRefs>-->
+<!--        </configuration>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>package</phase>-->
+<!--            <goals><goal>single</goal></goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
-      <plugin>
-        <groupId>com.akathist.maven.plugins.launch4j</groupId>
-        <artifactId>launch4j-maven-plugin</artifactId>
-        <version>2.1.3</version>
-        <executions>
-          <execution>
-            <id>l4j-clui</id>
-            <phase>package</phase>
-            <goals><goal>launch4j</goal></goals>
-            <configuration>
-              <headerType>console</headerType>
-              <outfile>target/${project.artifactId}.exe</outfile>
-              <jar>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>
-              <errTitle>${name}</errTitle>
-              <classPath>
-                <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>
-                <preCp>anything</preCp>
-                <addDependencies>true</addDependencies>
-              </classPath>
-              <jre>
-                <path>%JAVA_HOME%;%PATH%</path>
-                <minVersion>18</minVersion>
-              </jre>
-              <opt>--enable-preview</opt>
-              <versionInfo>
-                <fileVersion>${project.version}.0</fileVersion>
-                <txtFileVersion>txt file version?</txtFileVersion>
-                <fileDescription>a description</fileDescription>
-                <copyright>MIT</copyright>
-                <productVersion>${project.version}.0</productVersion>
-                <txtProductVersion>txt product version</txtProductVersion>
-                <productName>${project.artifactId}</productName>
-                <internalName>${project.artifactId}</internalName>
-                <originalFilename>math.exe</originalFilename>
-              </versionInfo>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
+<!--        <artifactId>launch4j-maven-plugin</artifactId>-->
+<!--        <version>2.1.3</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>l4j-clui</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals><goal>launch4j</goal></goals>-->
+<!--            <configuration>-->
+<!--              <headerType>console</headerType>-->
+<!--              <outfile>target/${project.artifactId}.exe</outfile>-->
+<!--              <jar>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>-->
+<!--              <errTitle>${name}</errTitle>-->
+<!--              <classPath>-->
+<!--                <mainClass>com.github.rccookie.math.calculator.Calculator</mainClass>-->
+<!--                <preCp>anything</preCp>-->
+<!--                <addDependencies>true</addDependencies>-->
+<!--              </classPath>-->
+<!--              <jre>-->
+<!--                <path>%JAVA_HOME%;%PATH%</path>-->
+<!--                <minVersion>18</minVersion>-->
+<!--              </jre>-->
+<!--              <opt>&#45;&#45;enable-preview</opt>-->
+<!--              <versionInfo>-->
+<!--                <fileVersion>${project.version}.0</fileVersion>-->
+<!--                <txtFileVersion>txt file version?</txtFileVersion>-->
+<!--                <fileDescription>a description</fileDescription>-->
+<!--                <copyright>MIT</copyright>-->
+<!--                <productVersion>${project.version}.0</productVersion>-->
+<!--                <txtProductVersion>txt product version</txtProductVersion>-->
+<!--                <productName>${project.artifactId}</productName>-->
+<!--                <internalName>${project.artifactId}</internalName>-->
+<!--                <originalFilename>math.exe</originalFilename>-->
+<!--              </versionInfo>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 </project>
